// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Normal Logging Will log an object in context 1`] = `
Object {
  "context": Object {
    "custom": Object {
      "a": 1,
      "b": 2,
    },
    "runtime": Object {
      "application": "testLogality",
      "file": "/test/spec/logging.test.js",
    },
    "source": Object {
      "file_name": "/test/spec/logging.test.js",
    },
    "system": Object {
      "hostname": "127.0.0.1",
      "pid": 36255,
      "process_name": "/Users/thanpolas/.nvm/versions/node/v10.1.0/bin/node",
    },
  },
  "dt": "2018-05-18T16:25:57.815Z",
  "event": Object {},
  "level": "info",
  "message": "hello world",
}
`;

exports[`Normal Logging Will log expected JSON properties 1`] = `
Object {
  "context": Object {
    "runtime": Object {
      "application": "testLogality",
      "file": "/test/spec/logging.test.js",
    },
    "source": Object {
      "file_name": "/test/spec/logging.test.js",
    },
    "system": Object {
      "hostname": "127.0.0.1",
      "pid": 36255,
      "process_name": "/Users/thanpolas/.nvm/versions/node/v10.1.0/bin/node",
    },
  },
  "dt": "2018-05-18T16:25:57.815Z",
  "event": Object {},
  "level": "info",
  "message": "hello world",
}
`;
